--- a/001_IOandOperator/.project
+++ b/001_IOandOperator/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>001_baekjunpractice</name>
+	<name>001_IOandOperator</name>
 	<comment></comment>
 	<projects>
 	</projects>
